
    o Fixed bug in sameValueAs when comparing an integer to a float/double.

Reasoners:
    o Extended rule parser to support typed literals using N3 type syntax 
      such as 'true'^^xsd:byte.
      
    o Fixed bug with rule sets which include a proprocessing hook to ensure,
      the hooks are rerun after new triple adds which should invoke the hook.
      
    o Modified processing of non-monotonic rulesets (involving drop/remove) so
      that each entry in the conflict set is fired separately and all the 
      consquences propagated before attempting to fire the next rule.
      To avoid performance hits, rulesets not involving such operators
      execute as before.
      User defined Builtins which remove data should be marked as such 
      using the isMonotonic method.
      
    o Fixed bug in TransitiveGraphCache which had resulted in some
      transitive reductions being incompletely reduced (i.e. some
      indirect property instances were being incorrectly reported as
      being direct).
      
    o Added "drop" operator as an alternative to "remove" when performing
      non-monotonic rewrites.
      
    o Fixed bug in rebind/reset of infgraphs which use TGC and failed to
      reset the transitive engine.
      
    o Optimized Resource.remove operations for the case where the parent model
      is an InfModel.
      
    o The default DIG reasoner used in the documentation examples has been
      changed from Racer to Pellet. Pellet is free and open-source, while Racer
      has switched to a commercial license model.

Ontology API
    o OntDocumentManager now delegates file resolution and model caching to
      FileManager, which means that FileManager's resolution strategies can
      be used to locate ontology files (e.g. from the classloader).
    o Prefix mapping and ontology language selection in the OntDocumentManager
      has been deprecated, and will be removed in a future version of Jena.

Command line utilities